--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -5,6 +5,7 @@
   <p> <%= portfolio_item.subtitle%> </p>
   <p> <%= portfolio_item.body %> </p>
   <p> <%= portfolio_item.thumb_image %> </p>
-  <%= image_tag portfolio_item.thumb_image %>
+  <%# will show image unless the image is nil %>
+  <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
   
 <% end %>
