Added links to edit and create

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Portfolio Items</h1>
-
+<%= link_to 'Create New Item', new_portfolio_path %>
 <% @portfolio_items.each do |portfolio_item|  %>
   <p> <%= portfolio_item.title %> </p>
   <p> <%= portfolio_item.subtitle%> </p>
@@ -7,5 +7,5 @@
   <p> <%= portfolio_item.thumb_image %> </p>
   <%# will show image unless the image is nil %>
   <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
-  
+  <%= link_to 'Edit', edit_portfolio_path(portfolio_item.id) %>  
 <% end %>
