--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -7,5 +7,6 @@
   <p> <%= portfolio_item.thumb_image %> </p>
   <%# will show image unless the image is nil %>
   <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
-  <%= link_to 'Edit', edit_portfolio_path(portfolio_item.id) %>  
+  <%= link_to 'Edit', edit_portfolio_path(portfolio_item.id) %> 
+  <%= link_to 'Delete', portfolio_path(portfolio_item.id), method: :delete, data: {confirm: 'Are you sure?'} %> 
 <% end %>
