--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -24,14 +24,8 @@
 
     <%= yield %>
 
+   <%= render 'shared/nav' %>
 
-  <div>
-      <div> <%= link_to 'Home', root_path %> </div>
-      <div> <%= link_to 'About', about_path %> </div>
-      <div> <%= link_to 'Contact', contact_path %> </div>
-      <div> <%= link_to 'Blogs', blogs_path %> </div>
-      <div> <%= link_to 'Portfolio', portfolios_path %> </div>
-    </div>
 
 
   <% if session[:source] %>
